# KHook

./: .gitignore  .gitmodules  AMBuildScript  AMBuilder  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: khook.hpp
include/khook/: asm.hpp  khook.hpp  memory.hpp
include/khook/asm/: x86.hpp  x86_64.hpp
src/: CMakeLists.txt  detour.cpp  detour.hpp  main.cpp
